--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</style>
 	
 	<p>
-	<img src="bgmm.svg" alt="bgm"> 
+	<img/svg+xml src="bgmm.svg" alt="bgm"> 
 		</p>
 	<style> img{margin:90px 10px;
 		padding: 0px 70px;
