--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		}
 	</style>
 	
-	<p class="bun"><img src="miurabunga.svg" alt="bun"></p>
+	<p class="bun"><img/svg+xml src="miurabunga.svg" alt="bun"></p>
 	 
 	
 	<p class="bgm">
-	<img src="bgmm.svg" alt="bgm"> 
+	<img/svg+xml src="bgmm.svg" alt="bgm"> 
 		</p>
 	
 
