--- a/Done.html
+++ b/Done.html
@@ -45,19 +45,17 @@ margin: 20px 2%}
 	</style>
 		
 	
-	<div class="v"><video controls autoplay loop><source src="DONE.mp4"　></video></div>
-	　  <style>
-.v  {
- 
-	text-align: center}
+<a href="https://youtu.be/lZFNyQnNKGc">本編映像</a>
+<style> a {font-size: 15px;
+font-family: 'Noto Sans JP', sans-serif;
+   margin-right: auto;
+	margin-left: auto;
+ letter-spacing: 0.08em;
+ width: 70%;
+ text-align:left;
+line-height: 2;
+margin-top: 40px} </style>
 
-.v video {width:  70%;
- 
-	text-align: center;}
-	</style>
-		
-	
-	
 <div class="e">
 	<p >DONEは、ひらがなに、そのひらがなから始まる動詞のアクションを加え、<br>
 		そこから生まれる動きや形の変化の面白さを映像にした作品です<br><br>
