--- a/Done.html
+++ b/Done.html
@@ -45,9 +45,11 @@ margin: 20px 2%}
 	</style>
 		
 	
-<a href="https://youtu.be/lZFNyQnNKGc">本編映像</a>
-<style> a {font-size: 15px;
-font-family: 'Noto Sans JP', sans-serif;
+
+	<h2><a href="https://youtu.be/lZFNyQnNKGc" target="_blank">本編映像</a></h2>
+<style> h2 a{display: block;
+	font-family: 'Noto Sans JP', sans-serif;
+	 color:hsla(0,0%,0%,1.00);
    margin-right: auto;
 	margin-left: auto;
  letter-spacing: 0.08em;
@@ -55,6 +57,7 @@ font-family: 'Noto Sans JP', sans-serif;
  text-align:left;
 line-height: 2;
 margin-top: 40px} </style>
+
 
 <div class="e">
 	<p >DONEは、ひらがなに、そのひらがなから始まる動詞のアクションを加え、<br>
