--- a/manymany.html
+++ b/manymany.html
@@ -41,16 +41,17 @@ font-family: 'Noto Sans JP', sans-serif;
 	
 	img {width: 70%; }</style>
 	
-	<div class="v"><video controls autoplay loop><source src="many.mp4"></video></div>
-	<style>.v  {
- 
-	text-align: center}
-
-.v video {width: 70%;
- 
-	text-align: center;
-
-margin: 40px  30px;}</style>
+	<h2><a href="https://youtu.be/CyrfCuLIXq8" target="_blank">本編映像</a></h2>
+<style> h2 a{display: block;
+	font-family: 'Noto Sans JP', sans-serif;
+	 color:hsla(0,0%,0%,1.00);
+   margin-right: auto;
+	margin-left: auto;
+ letter-spacing: 0.08em;
+ width: 70%;
+ text-align:left;
+line-height: 2;
+margin-top: 40px} </style>
 	<div class="e">
 	<p >manymanyは、映像を合成し作為的に手を加え、日常の中での非日常な違和感や面白さを<br>
 		映像とグラフィックで表現した作品です。<br><br>
