--- a/player.html
+++ b/player.html
@@ -40,14 +40,17 @@ margin:20px}
 
 	</style>
 	
-	<div class="v"><video controls autoplay loop><source src="icafジングル.mp4"　poster="icafベンチ.png"></video></div>
-	<style>.v  {
- 
-	text-align: center}
-
-.v video {width: 70%;
- 
-	text-align: center;}
+	<h2><a href="https://youtu.be/ykJmPDwQnAU" target="_blank">本編映像</a></h2>
+<style> h2 a{display: block;
+	font-family: 'Noto Sans JP', sans-serif;
+	 color:hsla(0,0%,0%,1.00);
+   margin-right: auto;
+	margin-left: auto;
+ letter-spacing: 0.08em;
+ width: 70%;
+ text-align:left;
+line-height: 2;
+margin-top: 40px} </style>
 
 		
 	</style>
