--- a/opencampus.html
+++ b/opencampus.html
@@ -41,16 +41,17 @@
   }
 </style>
 	
-	<div class="v"><video controls autoplay loop><source src="授業紹介.mp4"　></video></div>
-	<style>.v  {
- 
-	text-align: center}
-
-.v video {width: 70%;
- 
-	text-align: center;
- 
-    margin: 40px}</style>
+		<h2><a href="https://youtu.be/VPk2gX2WaGo" target="_blank">本編映像</a></h2>
+<style> h2 a{display: block;
+	font-family: 'Noto Sans JP', sans-serif;
+	 color:hsla(0,0%,0%,1.00);
+   margin-right: auto;
+	margin-left: auto;
+ letter-spacing: 0.08em;
+ width: 70%;
+ text-align:left;
+line-height: 2;
+margin-top: 40px} </style>
 	
 
 	<p class="c"><img src="3d1.gif" alt="3d1"><img src="3d2.gif" alt="3d2"><img src="3d3.gif" alt="3d3"><img src="3d5.gif" alt="3d4"><img src="3d6.gif" alt="3d5"></p>
