--- a/visualoop.html
+++ b/visualoop.html
@@ -57,9 +57,12 @@ text-align: center}
 
 		
 	</style>
-	<div class="e"><p>武蔵野美術大学視覚伝達デザイン学科オープンキャンパス2018にて、映像班として授業紹介映像とSNS用の宣伝映像を作成しました。<br><br>
-	    授業紹介映像では、視覚伝達デザイン学科の目玉授業である、トラストウォーク、100枚ドローイング、ピクトグラム、レシピの授業を、<br>
-		わかりやすく、楽しく、かつ視覚伝達デザイン学科に入りたいと思ってもらえるような映像を目指し作成、Youtubeにて公開しました。<br><br>
+	<div class="e"><p>visualoopはループという言葉の意味を再解釈し、それをビジュアル化した作品です。<br><br>
+	    まずはじめにループの構造を分解し、どのような仕組みで成り立っているのかを研究しました。<br><br>
+今回の作品ではループには土台とその上にのっかているオブジェクトの二つで成り立っていると定義し、<br>
+		それらの位置を交換したらどのような見え方が生まれるかを実験したものです。<br>
+		
+	<br><br>
 		SNS用の宣伝映像では、「みるみる実る」というコンセプトの基、<br>
 		植木鉢に入ったタネがどんどんと成長していく様子を、５つの映像に分け作成しました。<br>
 		この映像はオープンキャンパスの4週間前から、１週間に１つのスパンで公式Twitterで公開されました。</p></div><style>.e {font-size: 12px;
