--- a/visualoop.html
+++ b/visualoop.html
@@ -60,12 +60,10 @@ text-align: center}
 	<div class="e"><p>visualoopはループという言葉の意味を再解釈し、それをビジュアル化した作品です。<br><br>
 	    まずはじめにループの構造を分解し、どのような仕組みで成り立っているのかを研究しました。<br><br>
 今回の作品ではループには土台とその上にのっかているオブジェクトの二つで成り立っていると定義し、<br>
-		それらの位置を交換したらどのような見え方が生まれるかを実験したものです。<br>
-		
-	<br><br>
-		SNS用の宣伝映像では、「みるみる実る」というコンセプトの基、<br>
-		植木鉢に入ったタネがどんどんと成長していく様子を、５つの映像に分け作成しました。<br>
-		この映像はオープンキャンパスの4週間前から、１週間に１つのスパンで公式Twitterで公開されました。</p></div><style>.e {font-size: 12px;
+		それらの位置を本質的な構造は変えずに交換したらどのような見え方が生まれるかを実験したものです。<br>
+ループの具体的なものである、ジェットコースター、ハムスターの回転車、流れるプール、フラフープ、メリーゴーランドの5つを使って映像で表現しました。
+
+		</p></div><style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
    margin-right: auto;
 	margin-left: auto;
