--- a/magritte.html
+++ b/magritte.html
@@ -54,12 +54,11 @@
 	
 	
 	<div class="e">
-	<p >武蔵野美術大学視覚伝達デザイン学科オープンキャンパス2018にて、映像班として授業紹介映像とSNS用の宣伝映像を作成しました。<br><br>
-	    授業紹介映像では、視覚伝達デザイン学科の目玉授業である、トラストウォーク、100枚ドローイング、ピクトグラム、レシピの授業を、<br>
-		わかりやすく、楽しく、かつ視覚伝達デザイン学科に入りたいと思ってもらえるような映像を目指し作成、Youtubeにて公開しました。<br><br>
-		SNS用の宣伝映像では、「みるみる実る」というコンセプトの基、<br>
-		植木鉢に入ったタネがどんどんと成長していく様子を、５つの映像に分け作成しました。<br>
-		この映像はオープンキャンパスの4週間前から、１週間に１つのスパンで公式Twitterで公開されました。</p></div>
+	<p >Mirror of Magritteは自分の後ろ姿が見える鏡がある状況を体験できる装置です。<br><br>
+	    マグリットの作品の中にある「複製禁止」という作品から構想を経て、<br>
+		その空間で自分だけが反転せず、鏡に後ろ姿がうつっているように見えるようになっています。<br>
+　　　　　　　プログラミングソフトProcessingと、webカメラを使い、リアルタイムクロマキー技術で合成しています。<br><br>
+　　　　　　　日常的な鏡と自分というものを非日常に変えるインスタレーションです。</p></div>
 	<style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
    margin-right: auto;
