--- a/manymany.html
+++ b/manymany.html
@@ -58,7 +58,7 @@ margin-top: 40px} </style>
 		
 		同一人物を分身させ、一人なのに集団行動やフォーメンションを組んでいるようにしたり、<br>
 		空間を切り貼りすることで空間を歪ませたりしています。<br><br>
-		また映像をグラフィックとしても扱得るようにするため、静止画でも持つような画面作りを心がけました。
+		また映像をグラフィックとしても扱えるようにするため、静止画でも画面が持つような作品になるよう心がけ、制作しました。
 		</p></div>
 	　  
 	<style> p{text-align: center}
