--- a/manymany.html
+++ b/manymany.html
@@ -57,7 +57,7 @@ margin-top: 40px} </style>
 		映像とグラフィックで表現した作品です。<br><br>
 		
 		同一人物を分身させ、一人なのに集団行動やフォーメンションを組んでいるようにしたり、<br>
-		空間を切り貼りすることで空間を歪ませたりしています。<br><br>
+		を切り貼りすることで空間を歪ませたりしています。<br><br>
 		また映像をグラフィックとしても扱えるようにするため、静止画でも画面が持つような作品になるよう心がけ、制作しました。
 		</p></div>
 	　  
