--- a/magritte.html
+++ b/magritte.html
@@ -56,8 +56,9 @@
 	<div class="e">
 	<p >Mirror of Magritteは自分の後ろ姿が見える鏡がある状況を体験できる装置です。<br><br>
 マグリットの作品の中にある「複製禁止」という作品から構想を経て、<br>
-その空間で自分だけが反転せず、鏡に後ろ姿がうつっているように見えるようになっています。<br>
-プログラミングソフトProcessingと、webカメラを使い、リアルタイムクロマキー技術で合成しています。<br><br>
+その空間で自分だけが反転せず、鏡に自分の後ろ姿がうつっているように見えます。<br>
+プログラミングソフトProcessingと、webカメラを用いて、リアルタイムクロマキー技術で、<br>
+背後の壁から被験者の後ろ姿を撮影しているwebカメラの映像の緑色の部分に、背後の壁の画像を合成しています。<br><br>
 日常的な鏡と自分というものを非日常に変えるインスタレーションです。</p></div>
 	<style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
