--- a/snewdome.html
+++ b/snewdome.html
@@ -63,8 +63,9 @@ margin :30px 0px 5% 0px}
 	    音が静かになるときの寂しさや不安を解消し、ふとした瞬間に心を豊かに明るくすることを目的として作成しました。<br><br>
 		
 		プログラミングソフトProcessingで周りの音の大きさの平均をとっており、一定の小ささになるとプログラミングソフトArduinoでモーターが回転します。<br>
-		<br>
-	　　　<br>
+		<br><br>
+（ToyDesign課題　support : 古堅 真彦　岡田 憲明）
+		
 	　　　</p></div><style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
    margin-right: auto;
