--- a/manymany.html
+++ b/manymany.html
@@ -58,7 +58,8 @@ margin-top: 40px} </style>
 		
 		同一人物を分身させ、一人なのに集団行動やフォーメンションを組んでいるようにしたり、<br>
 		を切り貼りすることで空間を歪ませたりしています。<br><br>
-		また映像をグラフィックとしても扱えるようにするため、静止画でも画面が持つような作品になるよう心がけ、制作しました。
+		また映像をグラフィックとしても扱えるようにするため、静止画でも画面が持つような作品になるよう心がけ、制作しました。<br><br>
+（マーケティングコミュニケーションデザイン課題　support : 沢田 耕一）
 		</p></div>
 	　  
 	<style> p{text-align: center}
