--- a/visualoop.html
+++ b/visualoop.html
@@ -59,9 +59,10 @@ text-align: center}
 	</style>
 	<div class="e"><p>visualoopはループという言葉の意味を再解釈し、それをビジュアル化した作品です。<br><br>
 	    まずはじめにループの構造を分解し、どのような仕組みで成り立っているのかを研究しました。<br><br>
-今回の作品ではループには土台とその上にのっかているオブジェクトの二つで成り立っていると定義し、<br>
-		それらの位置を本質的な構造は変えずに交換したらどのような見え方が生まれるかを実験したものです。<br>
-ループの具体的なものである、ジェットコースター、ハムスターの回転車、流れるプール、フラフープ、メリーゴーランドの5つを使って映像で表現しました。
+今回の作品ではループには土台とその上にのっかているオブジェクトの二つで成り立っていると自分たちで定義し、<br>
+		それらの物体の位置を本質的な構造は変えずに交換したらどのような見え方が生まれるかを実験したものです。<br>
+ループの具体的な例である、ジェットコースター、ハムスターの回転車、流れるプール、フラフープ、メリーゴーランドの5つを使って映像で表現しました。<br><br>
+（情報デザイン課題　support : 古堅 真彦　石塚 英樹）
 
 		</p></div><style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
