--- a/magritte.html
+++ b/magritte.html
@@ -59,7 +59,8 @@
 その空間で自分だけが反転せず、鏡に自分の後ろ姿がうつっているように見えます。<br>
 プログラミングソフトProcessingと、webカメラを用いて、リアルタイムクロマキー技術で、<br>
 背後の壁から被験者の後ろ姿を撮影しているwebカメラの映像の緑色の部分に、背後の壁の画像を合成しています。<br><br>
-日常的な鏡と自分というものを非日常に変えるインスタレーションです。</p></div>
+日常的な鏡と自分というものを非日常に変えるインスタレーションです。<br><br>
+（情報デザイン課題　support : 古堅 真彦　石塚 英樹）</p></div>
 	<style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
    margin-right: auto;
