--- a/Profile.html
+++ b/Profile.html
@@ -40,7 +40,7 @@ font-family: 'Noto Sans JP', sans-serif;
 		2016年武蔵野美術大学造形学部視覚伝達デザイン学科入学　現在本学科三年在学中<br>
 		映像や写真、音を使った作品を中心に制作している。<br>
 		ものの動きやリズムに興味がある。<br>
-		幻冬舎でデザイナーアシスタントをしている。</p></div>
+		</p></div>
 		<style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
    margin-right: auto;
