--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@ p{text-align: center}
 		<a class="i" href="player.html">players</a>
 		<a class="j" href="opencampus.html">open campus promotion videos</a>
 		<a class="k" href="photos.html">photos</a>
+		<a class="l" href="graphics.html">graphics</a>
+		
     </div>
 	 　<style> 
 
 
-.c,.d,.e,.f,.g,.h,.i,.j,.k {font-size: 14px;
+.c,.d,.e,.f,.g,.h,.i,.j,.k,.l {font-size: 14px;
 	                        color:#000000;
                             font-family:"Avenir Light";
                             text-decoration: none ;
