--- a/graphics.html
+++ b/graphics.html
@@ -27,6 +27,8 @@
 	<p><img src="joy2.png" alt="プール" class="pool"></p>
 	<p><img src="joy3.png" alt="プール" class="pool"></p>
 	<p><img src="joy4.png" alt="プール" class="pool"></p>
+	<p><img src="g1.png" alt="プール" class="pool"></p>
+	<p><img src="g2.png" alt="プール" class="pool"></p>
 	<p><img src="アイス.jpg" alt="プール" class="pool"></p>
 	<p><img src="日記1.jpg" alt="プール" class="pool"></p>
 	<p><img src="日記2.jpg" alt="プール" class="pool"></p>
