--- a/graphics.html
+++ b/graphics.html
@@ -27,6 +27,7 @@
 	<p><img src="joy2.png" alt="プール" class="pool"></p>
 	<p><img src="joy3.png" alt="プール" class="pool"></p>
 	<p><img src="joy4.png" alt="プール" class="pool"></p>
+	<p><img src="虫.jpg" alt="プール" class="pool"></p>
 	<p><img src="g1.png" alt="プール" class="pool"></p>
 	<p><img src="g2.png" alt="プール" class="pool"></p>
 	<p><img src="アイス.jpg" alt="プール" class="pool"></p>
@@ -38,6 +39,8 @@
 	<p><img src="cityboys2.jpg" alt="プール" class="pool"></p>
 	<p><img src="cityboys3.jpg" alt="プール" class="pool"></p>
 	<p><img src="cityboys4.jpg" alt="プール" class="pool"></p>
+	<p><img src="パン.png" alt="プール" class="pool"></p>
+	<p><img src="植木.png" alt="プール" class="pool"></p>
 	
 	<style>
 		
