--- a/graphics.html
+++ b/graphics.html
@@ -31,16 +31,29 @@
 	<p><img src="g1.png" alt="プール" class="pool"></p>
 	<p><img src="g2.png" alt="プール" class="pool"></p>
 	<p><img src="アイス.jpg" alt="プール" class="pool"></p>
+	<p><img src="アイス1.jpg" alt="プール" class="pool"></p>
 	<p><img src="日記1.jpg" alt="プール" class="pool"></p>
 	<p><img src="日記2.jpg" alt="プール" class="pool"></p>
 	<p><img src="park.jpg" alt="プール" class="pool"></p>
 	<p><img src="スタンプ.jpg" alt="プール" class="pool"></p>
+	<div class="v"><video controls autoplay loop><source src="三角.mp4"　></video></div>
+	<style>.v  {
+ 
+	text-align: center}
+
+.v video {width: 40%;
+ 
+	text-align: center;
+ 
+    margin: 40px}</style>
 	<p><img src="cityboys1.jpg" alt="プール" class="pool"></p>
 	<p><img src="cityboys2.jpg" alt="プール" class="pool"></p>
 	<p><img src="cityboys3.jpg" alt="プール" class="pool"></p>
 	<p><img src="cityboys4.jpg" alt="プール" class="pool"></p>
 	<p><img src="パン.png" alt="プール" class="pool"></p>
 	<p><img src="植木.png" alt="プール" class="pool"></p>
+	<p><img src="D.jpg" alt="プール" class="pool"></p>
+	
 	
 	<style>
 		
