--- a/player.html
+++ b/player.html
@@ -57,7 +57,8 @@ margin-top: 40px} </style>
 	
 	<div class="e">
 	<p >playersは、少女が分身して一人で遊んでいる様子をリズムに乗せて表現した作品です。<br><br>
-		ICAF2018武蔵野美術大学用のオープニングジングルとして作成しました。<br>
+		ICAF(Inter College Animation Festival)2018武蔵野美術大学用の<br>
+		オープニングジングルとして作成しました。<br>
 		</p></div>
 	<style>
 		.e {font-size: 12px;
