--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
 	
 	<div class="info">
 	<p id="t">twitter → @3bgm000 </p>
-	<p>mail → bunga1997piano@gmail.com</p>
+	<p>mail → bungamiura@gmail.com</p>
 	</div>
 	
 	<style>
