--- a/Profile.html
+++ b/Profile.html
@@ -38,11 +38,12 @@ font-family: 'Noto Sans JP', sans-serif;
 	<p >1997年東京生まれ<br>
 	    埼玉県在住<br>
 		2016年武蔵野美術大学造形学部視覚伝達デザイン学科入学　現在本学科三年在学中<br>
-		映像や写真、音を使った作品を中心に制作している。<br>
-                ものの動きやリズムに興味がある。<br>
-                音楽を演奏するのも聴くのも好き。テクノポップからクラシック、KPOPに至るまで<br>
+                グラフィックデザイン、映像、写真、3DCG、アニメーション、プログラミングなどといった<br>
+                様々な手法を用いてコミュニケーションデザインを行なっている。<br>
+                ものの動きやリズムに興味があり、音楽とデザインが共存する世界に憧れを持つ。<br>
+                音楽は演奏するのも聴くのも好き。テクノポップからクラシック、KPOPに至るまで。<br>
                 中学、高校時代ではピアノ、チェロを弾いていた。<br>
-                趣味はダンス動画を見ること。<br>
+                趣味はダンス動画を見ることとそれを真似して踊ること。<br>
 		</p></div>
 		<style>.e {font-size: 12px;
 font-family: 'Noto Sans JP', sans-serif;
