--- a/manymany.html
+++ b/manymany.html
@@ -30,7 +30,7 @@
 		h1 {text-align: center}</style>
 	 
 	
-	<p><img src="manyメイン.png" alt="メイン"　></p>
+	<p><img src="manyメイン2.png" alt="メイン"　></p>
 	<style> p{text-align: center}
 
 p {font-size: 12px;
