--- a/snewdome.html
+++ b/snewdome.html
@@ -36,6 +36,8 @@
 	
 	
 	 <p class="a"><img src="snewブツ撮り.jpg" alt="ブツ" ></p>
+	
+	 <p class="a"><img src="snewver_アートボード 1.png" alt="ブツ" ></p>
 	<style>
 		
  .a img {width: 70%; 
