--- a/manymany.html
+++ b/manymany.html
@@ -90,6 +90,20 @@ line-height: 2}
 	<p><img src="ほなみ神.png" alt="神"　></p>
 	
 	<p><img src="ほなみ円.png" alt="円"　></p>
+	
+	<p><img src="_IGP8886.JPG" alt="サザエ"　></p>
+	
+	<p><img src="_IGP8888.JPG" alt="マック"　></p>
+ 	
+	<p><img src="IMG_8745.JPG" alt="三"　></p>
+	
+	<p><img src="_IGP8924.JPG" alt="スロー"　></p>
+	
+	<p><img src="IMG_8783.JPG" alt="神"　></p>
+	
+	<p><img src="IMG_8734.JPG" alt="円"　></p>
+	
+	<p><img src="_IGP8927.JPG" alt="円"　></p>
 <style> p{text-align: center}
 
 p {font-size: 12px;
