--- a/manymany.html
+++ b/manymany.html
@@ -91,19 +91,19 @@ line-height: 2}
 	
 	<p><img src="ほなみ円.png" alt="円"　></p>
 	
-	<p><img src="_IGP8886.JPG" alt="サザエ"　></p>
+	<p><img src="1.JPG" alt="サザエ"　></p>
 	
-	<p><img src="_IGP8888.JPG" alt="マック"　></p>
+	<p><img src="2.JPG" alt="マック"　></p>
  	
-	<p><img src="IMG_8745.JPG" alt="三"　></p>
+	<p><img src="3.JPG" alt="三"　></p>
 	
-	<p><img src="_IGP8924.JPG" alt="スロー"　></p>
+	<p><img src="4.JPG" alt="スロー"　></p>
 	
-	<p><img src="IMG_8783.JPG" alt="神"　></p>
+	<p><img src="5.JPG" alt="神"　></p>
 	
-	<p><img src="IMG_8734.JPG" alt="円"　></p>
+	<p><img src="6.JPG" alt="円"　></p>
 	
-	<p><img src="_IGP8927.JPG" alt="円"　></p>
+	<p><img src="7.JPG" alt="円"　></p>
 <style> p{text-align: center}
 
 p {font-size: 12px;
