--- a/snewdome.html
+++ b/snewdome.html
@@ -60,6 +60,14 @@
 margin :30px 0px 5% 0px}
 	</style>
 	
+	<p class="con"><img src="snew構造-01" alt="bun"></p>
+	　<style>.con img{width: 70%;
+		  margin :10px 0px 1% 0px}
+		  
+		 .a {text-align: center} </style>
+
+     
+	
 	<div class="e">
 	<p >周りの環境音が静かになると自動で雪が舞う新しい（new）スノードーム、snew domeです。<br><br>
 	    音が静かになるときの寂しさや不安を解消し、ふとした瞬間に心を豊かに明るくすることを目的として作成しました。<br><br>
