--- a/snewdome.html
+++ b/snewdome.html
@@ -64,7 +64,7 @@ margin :30px 0px 5% 0px}
 	　<style>.con img{width: 70%;
 		  margin :10px 0px 1% 0px}
 		  
-		 .a {text-align: center} </style>
+		 .con {text-align: center} </style>
 
      
 	
