--- a/snewdome.html
+++ b/snewdome.html
@@ -60,7 +60,7 @@
 margin :30px 0px 5% 0px}
 	</style>
 	
-	<p class="con"><img src="snew構造.svgz" alt="n"></p>
+	<p class="con"><img src="snew構造-01.svg" alt="con"></p>
 	　<style>.con img{width: 70%;
 		  margin :10px 0px 1% 0px}
 		  
