--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Graphics</title>
-<link href="../css/stylesheet_WORKS.css" rel="stylesheet" type="text/css">
+<link href="css/stylesheet_WORKS.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
