--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
 	<header>
 		<div class="logo">
 			<a href="index.html">
-				<img src="../images/header.png" alt="logo">
+				<img src="header.png" alt="logo">
 			</a>
 		</div>
 	</header>
