--- a/Snew dome.html
+++ b/Snew dome.html
@@ -66,7 +66,7 @@
 							               <li><img src="snewdome_images/snew_宇宙.jpg" alt="miti"></li>
 										   <li><img src="snewdome_images/snew_恐竜.jpg" alt="miti"></li>
 						                   <li><img src="snewdome_images/snew_ピンク.jpg" alt="miti"></li>
-						                   <li><img src=".snewdome_images/snew_ノーマル.jpg" alt="miti"></li>
+						                   <li><img src="snewdome_images/snew_ノーマル.jpg" alt="miti"></li>
 										   <li><img src="snewdome_images/snew_秋.jpg" alt="miti"></li>
 										   <li><img src="snewdome_images/snew_羊.jpg" alt="miti"></li>
 							
