--- a/Dancing.html
+++ b/Dancing.html
@@ -71,7 +71,7 @@
 						       
 							               
 						                   <li><img src="Dancing_images/Dancing_装置.JPG" alt="miti"></li>
-						                   <li><img src="/Dancing_images/Dancing_下から.JPG" alt="miti"></li>
+						                   <li><img src="Dancing_images/Dancing_下から.JPG" alt="miti"></li>
 											<li><img src="Dancing_images/Dancing_展示実物.jpg" alt="miti"></li>
 										   <li><img src="Dancing_images/Dancing_プロトタイプ.jpg" alt="miti"></li>
 										   <li><img src="Dancing_images/14EDED7C-BEA7-4AF1-90A7-D182B9416577 2.JPG" alt="miti"></li>
