--- a/Book design.html
+++ b/Book design.html
@@ -42,7 +42,7 @@
 							      <section class="Photos-clearfix">
 						                <ui class="clearfix">
 						       
-							               <li><img src="../images/bookdesign_images/bookdesign_15秒.JPG" alt="miti"></li>
+							               <li><img src="bookdesign_images/bookdesign_15秒.JPG" alt="miti"></li>
 										   <li><img src="bookdesign_images/bookdesign_アメリカ不動産.JPG" alt="miti"></li>
 										   <li><img src="bookdesign_images/bookdesign_ウエディング.JPG" alt="miti"></li>
 										   <li><img src="bookdesign_images/bookdesign_クルーズ.JPG" alt="miti"></li>
