--- a/Graphics.html
+++ b/Graphics.html
@@ -47,7 +47,7 @@
 					   <img src="graphics_images/graphic_park.jpg" alt="profilepic">
 					   <img src="graphics_images/graphic_cityboys1.jpg" alt="profilepic">
 					    <img src="graphics_images/graphic_日記1.jpg" alt="profilepic">
-					     <img src=".graphics_images/graphic_虫.jpg" alt="profilepic">
+					     <img src="graphics_images/graphic_虫.jpg" alt="profilepic">
 						 
 				            </div>
 				
