--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					    <h1>PLAYERS</h1>
 						<h2>2018-movie</h2>
 				        <p></p>
-						    <h3><img src="players_images/players.mp4" alt="dancing"></h3>
+						    <h3><img src="icaf メイン.jpg" alt="dancing"></h3>
 					</a>
 				</section>
 				
