--- a/Book design.html
+++ b/Book design.html
@@ -42,7 +42,29 @@
 							      <section class="Photos-clearfix">
 						                <ui class="clearfix">
 						       
-							               <li><img src="bookdesign_images/bookdesign_15秒.JPG" alt="miti"></li>
+							                           <li><img src="bookdesign_images/bookdesign_湘南.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_水すまし.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_akebono.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_15秒の旅２.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_韓国.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_超元気.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_簡単最強子育て.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_福祉の旅路.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_白内障治療.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_心の駅.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_小樽.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_孤独な子ドクター.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_子供の目.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_人体.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_事業継承読本.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_パラオ.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_ネズミ.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_センターコート上.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_ウールリッチ.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_アドラー.jpg" alt="miti"></li>
+										   <li><img src="bookdesign_images/bookdesign_わが子が幸せになるには.jpg" alt="miti"></li>	
+									
+									<li><img src="bookdesign_images/bookdesign_15秒.JPG" alt="miti"></li>
 										   <li><img src="bookdesign_images/bookdesign_アメリカ不動産.JPG" alt="miti"></li>
 										   <li><img src="bookdesign_images/bookdesign_ウエディング.JPG" alt="miti"></li>
 										   <li><img src="bookdesign_images/bookdesign_クルーズ.JPG" alt="miti"></li>
