--- a/CONTACT.html
+++ b/CONTACT.html
@@ -35,7 +35,7 @@
 						<div class="ABOUT text">
 				           <h2>mail</h2>
 				               
-							<p><a href="mailto:bunga1997piano@gmail.com">bunga1997piano@gmail.com</a></p>
+							<p><a href="mailto:bunga1997piano@gmail.com">bungamiura@gmail.com</a></p>
 						
 						   <h2>twitter</h2>
 				               <a href="https://twitter.com/3bgm000" target="_blank">@3bgm000
